Add main entry point to package.json

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "cryptoninjaeg",
   "version": "1.0.0",
   "type": "module",
+  "main": "alpha-hunter.js",
   "dependencies": {
     "axios": "latest",
     "node-telegram-bot-api": "latest"
